Fixing nav menu on mobile

--- a/common/NavMenu.css
+++ b/common/NavMenu.css
@@ -1,24 +1,43 @@
 .navMenu {
   list-style: none;
   text-align: center;
-  padding: 1em 0;
   background-color: #00BCD4;
 }
 
 .navMenu .menuItem {
-  display:inline;
   text-transform: uppercase;
-  margin: 0 10px;
 }
 
 .navMenu .menuItem:hover a, .navMenu .menuItem .active {
   cursor: pointer;
-  border-bottom: 2px solid white;
-  padding-bottom: 3px;
+  background-color: #0FCAE2;
 }
 
 .navMenu .menuItem a {
   text-decoration: none;
   color: white;
-  padding: 0 0.5em;
+  padding: 1em 0;
+  display: block;
+}
+
+@media screen and (min-width: 800px) {
+  .navMenu {
+    padding: 1em 0;
+  }
+
+  .navMenu .menuItem {
+    display:inline;
+    margin: 0 10px;
+  }
+
+  .navMenu .menuItem:hover a, .navMenu .menuItem .active {
+    border-bottom: 2px solid white;
+    padding-bottom: 3px;
+    background-color: initial;
+  }
+
+  .navMenu .menuItem a {
+    padding: 0 0.5em;
+    display:inline;
+  }
 }
